...
  );
  const [pwdIsValid, setPwdIsValid] = useState<boolean | null>(null);

  // useEffect(() => {
  //   if (currUser._id) {
  //     navigation.pop();
  //     navigation.navigate('Login');
  //   }
  // }, [currUser]);

  const renderPasswordIcon = () => (
    <TouchableWithoutFeedback onPress={toggleSecureEntry}>
      <Icon name={secureTextEntry ? 'eye-slash' : 'eye'} size={20} />
...
    if (isValid) {
      dispatch(saveAccount(user, navigation));
    }
  };

  return (
    <Layout testID="accountView" style={styles.container}>
      <View>
        <View style={styles.inputContainer}>
          <Input
            testID="firstname"
            autoFocus
            label="Firstname"
...
              </Text>
            </View>
          )}
        </View>
        <View style={styles.buttonContainer}>
          <Button
            testID="nextStepBtn"
            title={isValid ? 'Next Step' : 'Add your info'}
            containerStyle={{width: '100%'}}
            buttonStyle={styles.button}
            titleStyle={styles.textButton}
            type="solid"
            disabled={!isValid}
...
          />
          <View style={{flexDirection: 'row', marginTop: 5}}>
            <Text style={styles.loginStyles} testID="loginText">
              Already have an account?
            </Text>
            <Text
              testID="loginBtn"
              style={styles.loginTextStyles}
              onPress={() => navigation.navigate('Login')}>
              Login
            </Text>
          </View>
        </View>
...
