...
          <Spinner status={'control'} size={'large'} />
        </Layout>
      )}

      {(error || success) && (
        <DropdownAlert
          testID="dropdownAlert"
          ref={ref => (dropDownAlertRef = ref)}
        />
      )}
    </ApplicationProvider>
  );
};
...
